--- a/index.html
+++ b/index.html
@@ -1,39 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Connect MetaMask Example</title>
-  <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Document-Backed Lending DApp</title>
+<script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<style>
+  body { font-family: 'Segoe UI', sans-serif; transition: 0.3s; background: #f3f4f6; color: #1f2937; }
+  body.dark-mode { background: #121212; color: #f9fafb; }
+  .container { margin-top: 50px; }
+  .btn { border-radius: 12px; margin-top: 5px; }
+  .dark-toggle { position: fixed; top: 10px; right: 10px; }
+  #walletMessage { font-weight: bold; margin-top: 10px; }
+</style>
 </head>
 <body>
-  <h2>MetaMask Connection Test</h2>
-  <button onclick="connectWallet()">Connect Wallet</button>
-  <p id="walletAddress"></p>
-  <p id="status"></p>
 
-  <script>
-    let web3;
-    let account;
+<button class="btn btn-dark dark-toggle" onclick="toggleDarkMode()">🌓 Toggle Dark Mode</button>
 
-    async function connectWallet() {
-      if (window.ethereum) {
-        web3 = new Web3(window.ethereum);
-        try {
-          const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
-          account = accounts[0];
-          document.getElementById('walletAddress').innerText = `Connected: ${account}`;
-          document.getElementById('status').innerText = '✅ Wallet connected successfully!';
-        } catch (err) {
-          // User denied or error
-          console.error(err);
-          document.getElementById('status').innerText = '❌ Wallet connection denied. Retrying in 3 seconds...';
-          setTimeout(connectWallet, 3000); // Retry after 3 seconds
-        }
+<div class="container">
+  <h2 class="text-center mb-4">📜 Document-Backed Lending DApp</h2>
+
+  <div class="card p-4 mb-4">
+    <h5>🔌 Wallet Connection</h5>
+    <button class="btn btn-primary w-100" onclick="connectWallet()">Connect Wallet</button>
+    <p id="walletMessage"></p>
+  </div>
+
+  <div class="row">
+    <div class="col-md-6 mb-4">
+      <div class="card p-4">
+        <h5>💰 Lender Panel</h5>
+        <input id="interestRate" class="form-control mb-2" placeholder="Interest Rate (%)">
+        <input id="loanAmount" class="form-control mb-2" placeholder="Loan Amount (in ETH)">
+        <input type="file" id="lenderDoc" class="form-control mb-3">
+        <button class="btn btn-success w-100" onclick="offerLoan()">Offer Loan</button>
+      </div>
+    </div>
+
+    <div class="col-md-6 mb-4">
+      <div class="card p-4">
+        <h5>📄 Borrower Panel</h5>
+        <input type="file" id="borrowerDoc" class="form-control mb-3">
+        <button class="btn btn-warning w-100 mb-2" onclick="submitDocument()">Submit Document</button>
+        <button class="btn btn-primary w-100 mb-2" onclick="takeLoan()">Take Loan</button>
+        <button class="btn btn-purple w-100 mb-2" onclick="repayLoan()">Repay Loan</button>
+        <p id="repayStatus"></p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script>
+let web3;
+let account;
+const contractAddress = "0x081C0Dd797dAd42B954154ED6dd81346fac5bA2b"; // your contract
+const contractABI = [/* Your ABI here */];
+let contract;
+
+// Dark mode toggle
+function toggleDarkMode() { document.body.classList.toggle("dark-mode"); }
+
+// Connect wallet with clear messages
+async function connectWallet() {
+  const walletMsg = document.getElementById("walletMessage");
+  if (window.ethereum) {
+    web3 = new Web3(window.ethereum);
+    try {
+      const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
+      account = accounts[0];
+      walletMsg.innerText = `✅ Connected: ${account}`;
+      walletMsg.style.color = "green";
+      contract = new web3.eth.Contract(contractABI, contractAddress);
+    } catch (error) {
+      if (error.code === 4001) { // user denied
+        walletMsg.innerText = "❌ Connection denied. Please approve MetaMask to continue.";
+        walletMsg.style.color = "red";
       } else {
-        document.getElementById('status').innerText = '⚠️ MetaMask not detected. Please install MetaMask.';
+        walletMsg.innerText = "❌ Error connecting wallet.";
+        walletMsg.style.color = "red";
       }
     }
-  </script>
+  } else {
+    walletMsg.innerText = "⚠️ MetaMask not detected. Please install MetaMask!";
+    walletMsg.style.color = "orange";
+  }
+}
+
+// Dummy functions (replace with your actual contract calls)
+function offerLoan(){ alert("Offer Loan clicked"); }
+function submitDocument(){ alert("Submit Document clicked"); }
+function takeLoan(){ alert("Take Loan clicked"); }
+function repayLoan(){ alert("Repay Loan clicked"); }
+
+</script>
 </body>
 </html>
