--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
 <style>
-  body { font-family: 'Segoe UI', sans-serif; padding: 20px; background:#f5f5f5; }
-  .card { padding: 20px; margin-bottom: 20px; border-radius: 12px; }
+  body { font-family: 'Segoe UI', sans-serif; padding: 20px; background: #f8f9fa; }
+  .card { padding: 20px; margin-bottom: 20px; border-radius: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
+  h2 { font-weight: bold; color: #2c3e50; }
   .btn { margin-top: 10px; border-radius: 8px; }
-  h2 { color: #2c3e50; font-weight: bold; }
 </style>
 </head>
 <body>
 <h2 class="text-center mb-4">📜 Document-Backed Lending DApp</h2>
 
-<div class="card shadow">
+<div class="card">
   <h5>🔌 Wallet Connection</h5>
   <button class="btn btn-primary" id="connectBtn">Connect Wallet</button>
-  <p id="wallet">Wallet: ❌ Not Connected</p>
+  <p id="wallet">Wallet: Not Connected</p>
 </div>
 
 <div class="row">
   <div class="col-md-6">
-    <div class="card bg-light shadow">
+    <div class="card bg-light">
       <h5>💰 Lender Panel</h5>
       <input id="interestRate" class="form-control mb-2" placeholder="Interest Rate (%)">
       <input id="loanAmount" class="form-control mb-2" placeholder="Loan Amount (ETH)">
@@ -34,7 +34,7 @@
   </div>
 
   <div class="col-md-6">
-    <div class="card bg-light shadow">
+    <div class="card bg-light">
       <h5>📄 Borrower Panel</h5>
       <input type="file" id="borrowerDoc" class="form-control mb-2">
       <button class="btn btn-primary w-100" id="submitDocBtn">Submit Document</button>
@@ -45,33 +45,34 @@
 </div>
 
 <script>
-let account, provider, signer, contract;
-const contractAddress = "0x081C0Dd797dAd42B954154ED6dd81346fac5bA2b";
-const contractABI = [ /* 🔹 Paste your ABI here */ ];
+let account;
+let contract;
+const contractAddress = "0x95A7bF06c04b889700e6E71784B3DD1c8EDCAdC7";  // ✅ your deployed contract
+const contractABI = [ /* paste ABI you provided here */ ];
 
-// ✅ Connect wallet
 document.getElementById("connectBtn").onclick = async () => {
   if (window.ethereum) {
     try {
-      provider = new ethers.providers.Web3Provider(window.ethereum);
+      const provider = new ethers.providers.Web3Provider(window.ethereum);
       await provider.send("eth_requestAccounts", []);
-      signer = provider.getSigner();
+      const signer = provider.getSigner();
       account = await signer.getAddress();
-      document.getElementById("wallet").innerText = "Wallet: ✅ " + account;
+
+      document.getElementById("wallet").innerText = "Wallet: " + account;
 
       contract = new ethers.Contract(contractAddress, contractABI, signer);
 
-      alert("✅ Wallet Connected: " + account);
+      alert("✅ Wallet Connected!");
     } catch (err) {
-      if (err.code === 4001) alert("❌ Connection rejected by user");
-      else alert("⚠️ " + err.message);
+      console.error(err);
+      alert("❌ " + err.message);
     }
   } else {
     alert("⚠️ Please install MetaMask!");
   }
 };
 
-// 🔑 File Hashing
+// Helper: SHA-256 hash of file
 async function getFileHash(file) {
   const arrayBuffer = await file.arrayBuffer();
   const hashBuffer = await crypto.subtle.digest('SHA-256', arrayBuffer);
@@ -79,22 +80,73 @@ async function getFileHash(file) {
   return '0x' + hashArray.map(b => b.toString(16).padStart(2,'0')).join('');
 }
 
-// 💰 Offer Loan
+// ✅ Offer Loan
 document.getElementById("offerLoanBtn").onclick = async () => {
   if (!account) return alert("Connect wallet first!");
   const rate = document.getElementById('interestRate').value;
   const amount = document.getElementById('loanAmount').value;
   const file = document.getElementById('lenderDoc').files[0];
-  if (!file) return alert("Upload document!");
+  if (!rate || !amount || !file) return alert("Fill all fields & upload document!");
+
   const hash = await getFileHash(file);
 
   try {
-    const tx = await contract.offerLoan(rate, hash, { value: ethers.utils.parseEther(amount) });
+    const tx = await contract.offerLoan(
+      rate,
+      hash,
+      { value: ethers.utils.parseEther(amount) }
+    );
     await tx.wait();
     alert("✅ Loan Offered Successfully!");
   } catch (err) {
     console.error(err);
-    alert("❌ Offer failed: " + err.message);
+    alert("❌ Transaction Failed: " + err.message);
+  }
+};
+
+// ✅ Submit Document (Borrower)
+document.getElementById("submitDocBtn").onclick = async () => {
+  if (!account) return alert("Connect wallet first!");
+  const file = document.getElementById('borrowerDoc').files[0];
+  if (!file) return alert("Upload a document!");
+  const hash = await getFileHash(file);
+
+  try {
+    const tx = await contract.submitDocument(hash);
+    await tx.wait();
+    alert("✅ Document Submitted!");
+  } catch (err) {
+    console.error(err);
+    alert("❌ Submission Failed: " + err.message);
+  }
+};
+
+// ✅ Take Loan
+document.getElementById("takeLoanBtn").onclick = async () => {
+  if (!account) return alert("Connect wallet first!");
+  try {
+    const tx = await contract.takeLoan();
+    await tx.wait();
+    alert("✅ Loan Taken!");
+  } catch (err) {
+    console.error(err);
+    alert("❌ Transaction Failed: " + err.message);
+  }
+};
+
+// ✅ Repay Loan
+document.getElementById("repayLoanBtn").onclick = async () => {
+  if (!account) return alert("Connect wallet first!");
+
+  try {
+    // Fetch loan amount from contract
+    const amount = await contract.loanAmount();
+    const tx = await contract.repayLoan({ value: amount });
+    await tx.wait();
+    alert("✅ Loan Repaid!");
+  } catch (err) {
+    console.error(err);
+    alert("❌ Repayment Failed: " + err.message);
   }
 };
 </script>
