--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Document-Backed Lending DApp</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
 <style>
-  body { font-family: 'Segoe UI', sans-serif; padding: 20px; background: #f8f9fa; }
-  .card { padding: 20px; margin-bottom: 20px; border-radius: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
-  h2 { font-weight: bold; color: #2c3e50; }
-  .btn { margin-top: 10px; border-radius: 8px; }
+  body { font-family: 'Segoe UI', sans-serif; padding: 20px; }
+  .card { padding: 20px; margin-bottom: 20px; border-radius: 10px; }
+  .btn { margin-top: 10px; }
 </style>
 </head>
 <body>
@@ -46,33 +44,30 @@
 
 <script>
 let account;
+const contractAddress = "0x081C0Dd797dAd42B954154ED6dd81346fac5bA2b";
+const contractABI = [ /* Paste your ABI here */ ];
+
 let contract;
-const contractAddress = "0x95A7bF06c04b889700e6E71784B3DD1c8EDCAdC7";  // ✅ your deployed contract
-const contractABI = [ /* paste ABI you provided here */ ];
 
 document.getElementById("connectBtn").onclick = async () => {
   if (window.ethereum) {
     try {
-      const provider = new ethers.providers.Web3Provider(window.ethereum);
-      await provider.send("eth_requestAccounts", []);
-      const signer = provider.getSigner();
-      account = await signer.getAddress();
-
+      const accounts = await ethereum.request({ method: "eth_requestAccounts" });
+      account = accounts[0];
       document.getElementById("wallet").innerText = "Wallet: " + account;
-
-      contract = new ethers.Contract(contractAddress, contractABI, signer);
-
+      // Create contract instance using ethers.js-like approach
+      contract = new window.ethers.Contract(contractAddress, contractABI, window.ethereum);
       alert("✅ Wallet Connected!");
     } catch (err) {
-      console.error(err);
-      alert("❌ " + err.message);
+      if (err.code === 4001) alert("❌ Connection rejected by user");
+      else alert(err.message);
     }
   } else {
     alert("⚠️ Please install MetaMask!");
   }
 };
 
-// Helper: SHA-256 hash of file
+// Helper to hash files
 async function getFileHash(file) {
   const arrayBuffer = await file.arrayBuffer();
   const hashBuffer = await crypto.subtle.digest('SHA-256', arrayBuffer);
@@ -80,74 +75,26 @@ async function getFileHash(file) {
   return '0x' + hashArray.map(b => b.toString(16).padStart(2,'0')).join('');
 }
 
-// ✅ Offer Loan
+// Example for offerLoan
 document.getElementById("offerLoanBtn").onclick = async () => {
   if (!account) return alert("Connect wallet first!");
   const rate = document.getElementById('interestRate').value;
   const amount = document.getElementById('loanAmount').value;
   const file = document.getElementById('lenderDoc').files[0];
-  if (!rate || !amount || !file) return alert("Fill all fields & upload document!");
-
+  if (!file) return alert("Upload document!");
   const hash = await getFileHash(file);
-
   try {
-    const tx = await contract.offerLoan(
-      rate,
-      hash,
-      { value: ethers.utils.parseEther(amount) }
-    );
-    await tx.wait();
-    alert("✅ Loan Offered Successfully!");
-  } catch (err) {
-    console.error(err);
-    alert("❌ Transaction Failed: " + err.message);
-  }
-};
-
-// ✅ Submit Document (Borrower)
-document.getElementById("submitDocBtn").onclick = async () => {
-  if (!account) return alert("Connect wallet first!");
-  const file = document.getElementById('borrowerDoc').files[0];
-  if (!file) return alert("Upload a document!");
-  const hash = await getFileHash(file);
-
-  try {
-    const tx = await contract.submitDocument(hash);
-    await tx.wait();
-    alert("✅ Document Submitted!");
-  } catch (err) {
-    console.error(err);
-    alert("❌ Submission Failed: " + err.message);
-  }
-};
-
-// ✅ Take Loan
-document.getElementById("takeLoanBtn").onclick = async () => {
-  if (!account) return alert("Connect wallet first!");
-  try {
-    const tx = await contract.takeLoan();
-    await tx.wait();
-    alert("✅ Loan Taken!");
-  } catch (err) {
-    console.error(err);
-    alert("❌ Transaction Failed: " + err.message);
-  }
-};
-
-// ✅ Repay Loan
-document.getElementById("repayLoanBtn").onclick = async () => {
-  if (!account) return alert("Connect wallet first!");
-
-  try {
-    // Fetch loan amount from contract
-    const amount = await contract.loanAmount();
-    const tx = await contract.repayLoan({ value: amount });
-    await tx.wait();
-    alert("✅ Loan Repaid!");
-  } catch (err) {
-    console.error(err);
-    alert("❌ Repayment Failed: " + err.message);
-  }
+    await ethereum.request({
+      method: 'eth_sendTransaction',
+      params: [{
+        from: account,
+        to: contractAddress,
+        value: (parseFloat(amount) * 1e18).toString(16),
+        data: contract.methods.offerLoan(rate, hash).encodeABI()
+      }]
+    });
+    alert("✅ Loan Offered");
+  } catch (err) { console.error(err); alert("❌ Offer failed"); }
 };
 </script>
 </body>
